--- a/platformio.ini
+++ b/platformio.ini
@@ -6,4 +6,5 @@ monitor_speed = 115200
 build_flags = -DCORE_DEBUG_LEVEL=3
 ; Utilise la partition SPIFFS par défaut ; LittleFS montera automatiquement 'spiffs' si 'littlefs' absent
 ; board_build.partitions = default.csv
-lib_deps =
+;lib_deps =
+lib_deps = knolleary/PubSubClient @ ^2.8
